--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -262,6 +262,10 @@
                                     class="link-light rounded"><i class="bi bi-heart-fill"
                                         style="color: var(--bs-pink)"></i>
                                     Buy Us a Pizza</a></li>
+                            <li><a href="https://ko-fi.com/mathflare" target="_blank" rel="noopener"
+                                    class="link-light rounded"><i class="bi bi-heart-fill"
+                                        style="color: var(--bs-pink)"></i>
+                                    Ko-Fi</a></li>
                         </ul>
                     </div>
                 </li>
