--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -10,7 +10,8 @@
 </nav>
 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Menu</h5>
+        <h5 class="offcanvas-title" id="offcanvasExampleLabel"><img src="Assets/icon.png" class="user-select-none mb-1"
+                style="height: 1em;" alt="logo"> Menu</h5>
         <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas"
             aria-label="Close"></button>
     </div>
@@ -269,6 +270,8 @@
                         </ul>
                     </div>
                 </li>
+                <li class="border-top my-3"></li>
+                <li><p class="text-muted" style="padding: 0.5em;">&copy;2021 MathFlare Ltd. - All rights reserved.</p></li>
             </ul>
         </nav>
     </div>
