prod: added solution concentration calculator

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -177,6 +177,11 @@
                     <div class="collapse" id="chem-collapse">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small my-1">
                             <li>
+                                <p class="nav-header rounded user-select-none">Basic Chemistry</p>
+                            </li>
+                            <li><a href="concentration.html" class="link-light rounded"><i class="bi bi-funnel"></i>
+                                    Solution Concentration</a></li>
+                            <li>
                                 <p class="nav-header rounded user-select-none">Carbon Combustions</p>
                             </li>
                             <li><a href="carboncombustions.html" class="link-light rounded"><i
@@ -271,7 +276,9 @@
                     </div>
                 </li>
                 <li class="border-top my-3"></li>
-                <li><p class="text-muted" style="padding: 0.5em;">&copy;2021 MathFlare Ltd. - All rights reserved.</p></li>
+                <li>
+                    <p class="text-muted" style="padding: 0.5em;">&copy;2021 MathFlare Ltd. - All rights reserved.</p>
+                </li>
             </ul>
         </nav>
     </div>
