prod: changed donate link

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -260,7 +260,7 @@
                     </button>
                     <div class="collapse" id="support-collapse">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small my-1">
-                            <li><a href="https://paypal.me/mathflare" target="_blank" rel="noopener"
+                            <li><a href="https://www.paypal.com/donate?hosted_button_id=PMZ6QF7DDFQZC" target="_blank" rel="noopener"
                                     class="link-light rounded"><i class="bi bi-heart-fill"
                                         style="color: var(--bs-pink)"></i>
                                     PayPal Us</a></li>
