prod: added a simple calculator

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -24,6 +24,11 @@
                     </a>
                 </li>
                 <li class="my-2">
+                    <a class="btn btn-offcanvas-link align-items-center rounded" href="calculator.html">
+                        <i class="bi bi-calculator"></i>Simple Calculator
+                    </a>
+                </li>
+                <li class="my-2">
                     <a class="btn btn-offcanvas-link align-items-center rounded" href="cheatsheet.html">
                         <i class="bi bi-book"></i>Cheat Sheet
                     </a>
@@ -260,8 +265,8 @@
                     </button>
                     <div class="collapse" id="support-collapse">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small my-1">
-                            <li><a href="https://www.paypal.com/donate?hosted_button_id=PMZ6QF7DDFQZC" target="_blank" rel="noopener"
-                                    class="link-light rounded"><i class="bi bi-heart-fill"
+                            <li><a href="https://www.paypal.com/donate?hosted_button_id=PMZ6QF7DDFQZC" target="_blank"
+                                    rel="noopener" class="link-light rounded"><i class="bi bi-heart-fill"
                                         style="color: var(--bs-pink)"></i>
                                     PayPal Us</a></li>
                             <li><a href="https://buymeacoffee.com/mathflare" target="_blank" rel="noopener"
