prod: patreon link

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -277,6 +277,10 @@
                                     class="link-light rounded"><i class="bi bi-heart-fill"
                                         style="color: var(--bs-pink)"></i>
                                     Ko-Fi</a></li>
+                            <li><a href="https://patreon.com/mathflare" target="_blank" rel="noopener"
+                                    class="link-light rounded"><i class="bi bi-heart-fill"
+                                        style="color: var(--bs-pink)"></i>
+                                    Patreon</a></li>
                         </ul>
                     </div>
                 </li>
