--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -2,9 +2,9 @@
     <div class="container-fluid">
         <button class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
             aria-controls="offcanvasExample"><span class="navbar-toggler-icon"></span></button>
-        <a class="navbar-brand" href="https://www.mathflare.tk">
+        <a class="navbar-brand" href="https://www.mathflare.xyz">
             <img src="Assets/icon.png" class="user-select-none mb-1" style="height: 1em;" alt="logo">
-            MathFlare
+            MathFlare.xyz
         </a>
     </div>
 </nav>
@@ -265,7 +265,7 @@
                     </button>
                     <div class="collapse" id="support-collapse">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small my-1">
-                            <li><a href="https://www.paypal.com/donate?hosted_button_id=PMZ6QF7DDFQZC" target="_blank"
+                            <li><a href="https://www.paypal.me/mathflare" target="_blank"
                                     rel="noopener" class="link-light rounded"><i class="bi bi-heart-fill"
                                         style="color: var(--bs-pink)"></i>
                                     PayPal Us</a></li>
