--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -237,9 +237,9 @@
                                     class="link-light rounded"><i class="bi bi-envelope-fill"></i> Email</a></li>
                             <li><a href="https://instagram.com/mathflare" target="_blank" rel="noopener"
                                     class="link-light rounded"><i class="bi bi-instagram"></i> Instagram</a></li>
-                            <li><a href="https://api.mathflare.tk" target="_blank" rel="noopener"
+                            <li><a href="https://api.mathflare.xyz" target="_blank" rel="noopener"
                                     class="link-light rounded"><i class="bi bi-hdd-stack-fill"></i> REST API</a></li>
-                            <li><a href="https://developers.mathflare.tk" target="_blank" rel="noopener"
+                            <li><a href="https://developers.mathflare.xyz" target="_blank" rel="noopener"
                                     class="link-light rounded"><i class="bi bi-code-slash"></i> For Developers</a></li>
                             <li><a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener"
                                     class="link-light rounded"><i class="bi bi-bug-fill"></i> Report a Bug</a></li>
