--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -45,10 +45,7 @@
                             </li>
                             <li><a href="logar.html" class="link-light rounded"><i class="bi bi-percent"></i>
                                     Logarithms</a></li>
-                            <li><a href="sqrt.html" class="link-light rounded"><i class="bi bi-calculator"></i> Square
-                                    Root
-                                    Calculator</a></li>
-                            <li><a href="cbrt.html" class="link-light rounded"><i class="bi bi-calculator"></i> Cube
+                            <li><a href="roots.html" class="link-light rounded"><i class="bi bi-calculator"></i>
                                     Root
                                     Calculator</a></li>
                             <li><a href="pow.html" class="link-light rounded"><i class="bi bi-power"></i>
@@ -251,9 +248,7 @@
                             </li>
                             <li><a href="tos.html" class="link-light rounded"><i class="bi bi-card-checklist"></i> Terms
                                     of Use</a>
-                            <li><a href="license.html" class="link-light rounded"><i
-                                        class="bi bi-credit-card-2-front"></i> Software
-                                    License</a>
+                            </li>
                         </ul>
                     </div>
                 </li>
@@ -265,8 +260,8 @@
                     </button>
                     <div class="collapse" id="support-collapse">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small my-1">
-                            <li><a href="https://www.paypal.me/mathflare" target="_blank"
-                                    rel="noopener" class="link-light rounded"><i class="bi bi-heart-fill"
+                            <li><a href="https://www.paypal.me/mathflare" target="_blank" rel="noopener"
+                                    class="link-light rounded"><i class="bi bi-heart-fill"
                                         style="color: var(--bs-pink)"></i>
                                     PayPal Us</a></li>
                             <li><a href="https://buymeacoffee.com/mathflare" target="_blank" rel="noopener"
