--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -230,7 +230,7 @@
                             </li>
                             <li><a href="https://github.com/mathflare" target="_blank" rel="noopener"
                                     class="link-light rounded"><i class="bi bi-github"></i> GitHub</a></li>
-                            <li><a href="mailto:mathflare@pm.me" target="_blank" rel="noopener"
+                            <li><a href="mailto:contact@mathflare.xyz" target="_blank" rel="noopener"
                                     class="link-light rounded"><i class="bi bi-envelope-fill"></i> Email</a></li>
                             <li><a href="https://instagram.com/mathflare" target="_blank" rel="noopener"
                                     class="link-light rounded"><i class="bi bi-instagram"></i> Instagram</a></li>
@@ -291,7 +291,7 @@
                     <p class="text-break" id="search-result"></p>
                 </li>
                 <li>
-                    <p class="text-muted" style="padding: 0.5em;">&copy;2021 MathFlare Ltd. - All rights reserved.</p>
+                    <p class="text-muted" style="padding: 0.5em;">&copy;2021 MathFlare.xyz - All rights reserved.</p>
                 </li>
             </ul>
         </nav>
