--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -2,7 +2,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 @font-face {
     font-family: "MathFont";
-    src: url(../Assets/poppins-font.ttf);
+    src: url(../Assets/fonts/poppins-font.ttf);
 }
 body {
     font-family: "Poppins", "MathFont", "Segoe UI",sans-serif !important;
