--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -1,11 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url(../Assets/fonts/fonts.css);
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
-@font-face {
-    font-family: "MathFont";
-    src: url(../Assets/fonts/poppins-font.ttf);
-}
 body {
-    font-family: "Poppins", "MathFont", "Segoe UI",sans-serif !important;
+    font-family: "MathFont", "Segoe UI", sans-serif !important;
     color: hsl(0, 0%, 100%);
     background-color: hsl(210, 10%, 15%);
 }
