prod: manu button in the landing page

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -1,16 +1,16 @@
 <nav class="navbar fixed-top navbar-dark bg-dark" style="border-bottom: 1px solid var(--bs-warning)">
     <div class="container-fluid">
-        <button class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
-            aria-controls="offcanvasExample"><span class="navbar-toggler-icon"></span></button>
+        <button class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#menuSidebar"
+            aria-controls="menuSidebar"><span class="navbar-toggler-icon"></span></button>
         <a class="navbar-brand" href="https://www.mathflare.xyz">
             <img src="Assets/icon.png" class="user-select-none mb-1" style="height: 1em;" alt="logo">
             MathFlare.xyz
         </a>
     </div>
 </nav>
-<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+<div class="offcanvas offcanvas-start" tabindex="-1" id="menuSidebar" aria-labelledby="menuLabel">
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasExampleLabel"><img src="Assets/icon.png" class="user-select-none mb-1"
+        <h5 class="offcanvas-title" id="menuLabel"><img src="Assets/icon.png" class="user-select-none mb-1"
                 style="height: 1em;" alt="logo"> Menu</h5>
         <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas"
             aria-label="Close"></button>
