prod: added loan calculator

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -215,6 +215,22 @@
                 </li>
                 <li class="my-2">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
+                        data-bs-target="#every-day-collapse" aria-expanded="false">
+                        Every Day Life
+                    </button>
+                    <div class="collapse" id="every-day-collapse">
+                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small my-1">
+                            <li>
+                                <p class="nav-header rounded user-select-none">Financial</p>
+                            </li>
+                            <li><a href="loan.html" class="link-light rounded">
+                                    <i class="bi bi-bank"></i>
+                                    Loan Calculator</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="my-2">
+                    <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#links-collapse" aria-expanded="false">
                         Links
                     </button>
