--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -258,7 +258,8 @@ var {
 #tanhout,
 #sqrtout,
 #cbrtout,
-#nrootout {
+#nrootout,
+#loanout {
     font-size: 20px !important;
     line-height: 24px !important;
 }
