prod: minor changes

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -125,7 +125,7 @@
                             </li>
                             <li><a href="trigcalculator.html" class="link-light rounded"><i
                                         class="bi bi-calculator"></i>
-                                    Trigonometric Calculator (Sin,Cos,Tan)</a></li>
+                                    Trigonometric Calculator</a></li>
                             <li>
                                 <p class="nav-header rounded user-select-none">Pythagorean Theorem</p>
                             </li>
