prod: minor changes

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -259,7 +259,8 @@ var {
 #sqrtout,
 #cbrtout,
 #nrootout,
-#loanout {
+#loanout,
+#eliminationout {
     font-size: 20px !important;
     line-height: 24px !important;
 }
