--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -192,6 +192,9 @@
                             <li><a href="imperfcarboncombust.html" class="link-light rounded"><i
                                         class="bi bi-minecart-loaded"></i>
                                     Incomplete Combustions</a></li>
+                            <li><a href="imperfcarboncombust.html" class="link-light rounded"><i
+                                        class="bi bi-emoji-neutral"></i>
+                                    Neutralization Reaction Calculator</a></li>
                         </ul>
                     </div>
                 </li>
