prod: added percentage calculator in everyday life

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -232,6 +232,9 @@
                             <li><a href="loan.html" class="link-light rounded">
                                     <i class="bi bi-bank"></i>
                                     Loan Calculator</a></li>
+                            <li><a href="percent.html" class="link-light rounded">
+                                        <i class="bi bi-percent"></i>
+                                    Percentage Calculator</a></li>
                         </ul>
                     </div>
                 </li>
