prod: added a acid-metal reaction calculator

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -198,6 +198,9 @@
                             <li><a href="neutralization.html" class="link-light rounded"><i
                                         class="bi bi-emoji-neutral"></i>
                                     Neutralization Reaction Calculator</a></li>
+                                    <li><a href="acidmetalreaction.html" class="link-light rounded"><i
+                                        class="bi bi-emoji-neutral"></i>
+                                    Acid-Metal Reaction Calculator</a></li>
                         </ul>
                     </div>
                 </li>
