--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -196,10 +196,10 @@
                                 <p class="nav-header rounded user-select-none">Acids and Bases</p>
                             </li>
                             <li><a href="neutralization.html" class="link-light rounded"><i
-                                        class="bi bi-emoji-neutral"></i>
+                                        class="bi bi-droplet"></i>
                                     Neutralization Reaction Calculator</a></li>
                                     <li><a href="acidmetalreaction.html" class="link-light rounded"><i
-                                        class="bi bi-emoji-neutral"></i>
+                                        class="bi bi-funnel"></i>
                                     Acid-Metal Reaction Calculator</a></li>
                         </ul>
                     </div>
