--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -266,7 +266,8 @@ var {
 #cbrtout,
 #nrootout,
 #loanout,
-#eliminationout {
+#eliminationout,
+#acmetalout {
     font-size: 20px !important;
     line-height: 24px !important;
 }
