--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -267,7 +267,9 @@ var {
 #nrootout,
 #loanout,
 #eliminationout,
-#acmetalout {
+#acmetalout,
+#bmicatout,
+#bmiout {
     font-size: 20px !important;
     line-height: 24px !important;
     padding-left: 3em !important;
