--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -195,11 +195,9 @@
                             <li>
                                 <p class="nav-header rounded user-select-none">Acids and Bases</p>
                             </li>
-                            <li><a href="neutralization.html" class="link-light rounded"><i
-                                        class="bi bi-droplet"></i>
+                            <li><a href="neutralization.html" class="link-light rounded"><i class="bi bi-droplet"></i>
                                     Neutralization Reaction Calculator</a></li>
-                                    <li><a href="acidmetalreaction.html" class="link-light rounded"><i
-                                        class="bi bi-funnel"></i>
+                            <li><a href="acidmetalreaction.html" class="link-light rounded"><i class="bi bi-funnel"></i>
                                     Acid-Metal Reaction Calculator</a></li>
                         </ul>
                     </div>
@@ -236,8 +234,13 @@
                                     <i class="bi bi-bank"></i>
                                     Loan Calculator</a></li>
                             <li><a href="percent.html" class="link-light rounded">
-                                        <i class="bi bi-percent"></i>
+                                    <i class="bi bi-percent"></i>
                                     Percentage Calculator</a></li>
+                            <li><a href="avg.html" class="link-light rounded"><i class="bi bi-pie-chart"></i> Average
+                                    Calculator</a></li>
+                            <li><a href="bmi.html" class="link-light rounded"><i class="bi bi-speedometer2"></i> BMI
+                                    Calculator</a></li>
+                            <li><a href="handshake.html" class="link-light rounded">🤝 Handshakes at Party</a></li>
                         </ul>
                     </div>
                 </li>
