--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -233,14 +233,19 @@
                             <li><a href="loan.html" class="link-light rounded">
                                     <i class="bi bi-bank"></i>
                                     Loan Calculator</a></li>
+                            <li>
+                                <p class="nav-header rounded user-select-none">Fitness</p>
+                            </li>
+                            <li><a href="bmi.html" class="link-light rounded"><i class="bi bi-speedometer2"></i> BMI
+                                    Calculator</a></li>
+                            <li>
+                                <p class="nav-header rounded user-select-none">Other</p>
+                            </li>
                             <li><a href="percent.html" class="link-light rounded">
                                     <i class="bi bi-percent"></i>
                                     Percentage Calculator</a></li>
                             <li><a href="avg.html" class="link-light rounded"><i class="bi bi-pie-chart"></i> Average
                                     Calculator</a></li>
-                            <li><a href="bmi.html" class="link-light rounded"><i class="bi bi-speedometer2"></i> BMI
-                                    Calculator</a></li>
-                            <li><a href="handshake.html" class="link-light rounded">🤝 Handshakes at Party</a></li>
                         </ul>
                     </div>
                 </li>
