prod: added Inorganic Compounds Calculator

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -181,8 +181,10 @@
                             <li>
                                 <p class="nav-header rounded user-select-none">Basic Chemistry</p>
                             </li>
-                            <li><a href="concentration.html" class="link-light rounded"><i class="bi bi-funnel"></i>
+                            <li><a href="concentration.html" class="link-light rounded"><i class="bi bi-eyedropper"></i>
                                     Solution Concentration</a></li>
+                            <li><a href="inorganiccomp.html" class="link-light rounded"><i class="bi bi-water"></i>
+                                    Inorganic Compounds Calculator</a></li>
                             <li>
                                 <p class="nav-header rounded user-select-none">Carbon Combustions</p>
                             </li>
