--- a/Assets/fonts/fonts.css
+++ b/Assets/fonts/fonts.css
@@ -1,3 +1,4 @@
+/*POPPINS*/
 /* latin-ext */
 @font-face {
     font-family: "MathFont";
@@ -389,6 +390,17 @@
     font-weight: 900;
     font-display: swap;
     src: url(poppins-latin-900.woff2) format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+        U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
+        U+2215, U+FEFF, U+FFFD;
+}
+/*NUNITO*/
+@font-face {
+    font-family: "Mathnito";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(nunito-latin-400.woff2) format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
         U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
         U+2215, U+FEFF, U+FFFD;
