--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -201,6 +201,8 @@
                                     Neutralization Reaction Calculator</a></li>
                             <li><a href="acidmetalreaction.html" class="link-light rounded"><i class="bi bi-funnel"></i>
                                     Acid-Metal Reaction Calculator</a></li>
+                            <li><a href="acidcarbonate.html" class="link-light rounded"><i class="bi bi-droplet"></i>
+                                    Acid-Carbonate Reaction Calculator</a></li>
                         </ul>
                     </div>
                 </li>
