--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -201,7 +201,7 @@
                                     Neutralization Reaction Calculator</a></li>
                             <li><a href="acidmetalreaction.html" class="link-light rounded"><i class="bi bi-funnel"></i>
                                     Acid-Metal Reaction Calculator</a></li>
-                            <li><a href="acidcarbonate.html" class="link-light rounded"><i class="bi bi-droplet"></i>
+                            <li><a href="acidcarbonate.html" class="link-light rounded"><i class="bi bi-cloud"></i>
                                     Acid-Carbonate Reaction Calculator</a></li>
                         </ul>
                     </div>
