--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -270,7 +270,8 @@ var {
 #acmetalout,
 #inorganout,
 #bmicatout,
-#bmiout {
+#bmiout,
+#acidcarbonout {
     font-size: 20px !important;
     line-height: 24px !important;
     padding-left: 3em !important;
